UPDATE: Melhorando a legibilidade do código